fixed ui bug: white bg sometimes appear behind nav buttons

--- a/_sass/custom/header.sass
+++ b/_sass/custom/header.sass
@@ -60,6 +60,11 @@
   .logos
     max-height: 3.25rem
 
+  &:focus, 
+  &:focus-within, 
+  &:hover
+    background-color: transparent !important
+
 .navbar-item.home
   margin: 0.5rem
   padding: 0
